# soullocke-tracker

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  compose.yaml  index.html  package-lock.json  package.json  vite.config.ts
backend/: Cargo.toml  Dockerfile
backend/src/: main.rs  models.rs  room.rs  routes.rs  session.rs  tests.rs
src/: App.tsx  routes.tsx  styles.css  theme.ts
src/components/: BoxSlot.tsx  Home.tsx  PlayerProfile.tsx  PokemonIcon.tsx  RunPage.tsx  SaveUpload.tsx  TeamDisplay.tsx  Timeline.tsx
src/components/PlayerProfile/: PlayerProfile.css  PlayerProfile.tsx
src/components/RouteList/: RouteList.tsx  RoutePanel.tsx
src/data/: pokemon.ts  routes.ts  sprites.ts
src/models/: run.ts
src/util/: convert-png.js  mapPokemon.ts  runReducer.ts  uploadFile.ts  useWebSocket.ts
