[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.188"
futures = "0.3.28"
tokio = {version = "1.32.0", features = ["full"]}
dotenv = "0.15.0"
actix-web = "4.10.2"
serde_json = "1.0.140"
random_word = { version = "0.5.0", features = ["en"] }
rand = "0.9.0"
actix-ws = "0.3.0"
futures-util = "0.3.31"

[dependencies.mongodb]
version = "3.2.3"
